--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -101,6 +101,14 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        location /logout {
+            proxy_pass http://auth_service/logout/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Patient service routes
         location /api/patients/ {
             proxy_pass http://patient_service;
