--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -187,13 +187,36 @@ http {
             return 200 '{"status": "healthy", "service": "nginx"}';
         }
 
-        # Static files
+        # Static files - try auth service first, then patient service
         location /static/ {
-            proxy_pass http://patient_service/static/;
+            # Remove X-Content-Type-Options header for static files to avoid MIME type issues
+            proxy_hide_header X-Content-Type-Options;
+            
+            # Try auth service first
+            proxy_pass http://auth_service/static/;
+            proxy_intercept_errors on;
+            error_page 404 = @patient_static;
+            
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Cache static files
+            expires 30d;
+            add_header Cache-Control "public, immutable";
+        }
+        
+        location @patient_static {
+            proxy_pass http://patient_service;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Cache static files
+            expires 30d;
+            add_header Cache-Control "public, immutable";
         }
 
         location /media/ {
