--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -50,6 +50,10 @@ http {
         server database-service:8004;
     }
 
+    upstream admin_service {
+        server admin-service:8005;
+    }
+
     # Main server block
     server {
         listen 80;
@@ -65,15 +69,6 @@ http {
         # Root location - redirect to login
         location = / {
             return 301 /login;
-        }
-        
-        # Default location for other unmatched paths
-        location / {
-            proxy_pass http://auth_service;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # Auth service routes
@@ -151,6 +146,33 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Admin service routes
+        location /api/admin/ {
+            proxy_pass http://admin_service;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /admin/ {
+            proxy_pass http://admin_service;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Cookie $http_cookie;
+            proxy_pass_request_headers on;
+        }
+        
+        # Admin service static files
+        location ~ ^/admin/static/(.*)$ {
+            proxy_pass http://admin_service/static/$1;
+            proxy_set_header Host $host;
+            expires 30d;
+            add_header Cache-Control "public, immutable";
+        }
+
         # Database service routes (internal API)
         location /api/db/ {
             proxy_pass http://database_service/api/;
@@ -178,6 +200,11 @@ http {
 
         location /health/database {
             proxy_pass http://database_service/health/;
+            proxy_set_header Host $host;
+        }
+
+        location /health/admin {
+            proxy_pass http://admin_service/health/;
             proxy_set_header Host $host;
         }
 
@@ -209,6 +236,21 @@ http {
         
         location @patient_static {
             proxy_pass http://patient_service;
+            proxy_intercept_errors on;
+            error_page 404 = @admin_static;
+            
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Cache static files
+            expires 30d;
+            add_header Cache-Control "public, immutable";
+        }
+        
+        location @admin_static {
+            proxy_pass http://admin_service;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -223,6 +265,15 @@ http {
             alias /media/;
             expires 7d;
             add_header Cache-Control "public";
+        }
+
+        # Default location for other unmatched paths (must be last)
+        location / {
+            proxy_pass http://auth_service;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # Error pages
