--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -167,8 +167,12 @@ http {
         
         # Admin service static files
         location ~ ^/admin/static/(.*)$ {
-            proxy_pass http://admin_service/static/$1;
+            proxy_pass http://admin_service/admin/static/$1;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_hide_header X-Content-Type-Options;
             expires 30d;
             add_header Cache-Control "public, immutable";
         }
@@ -255,6 +259,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_hide_header X-Content-Type-Options;
             
             # Cache static files
             expires 30d;
