--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -54,10 +54,17 @@ http {
         server admin-service:8005;
     }
 
+    upstream file_service {
+        server file-service:8006;
+    }
+
     # Main server block
     server {
         listen 80;
         server_name localhost;
+        
+        # Set max upload size globally
+        client_max_body_size 50M;
 
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
@@ -186,6 +193,26 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # File service routes
+        location /api/files/ {
+            proxy_pass http://file_service/api/files/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            
+            # Increase timeout for file uploads
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 300s;
+            
+            # Increase buffer sizes for file uploads
+            client_max_body_size 100M;
+            proxy_buffers 16 16k;
+            proxy_buffer_size 32k;
+        }
+
         # Health check endpoints
         location /health/auth {
             proxy_pass http://auth_service/health/;
@@ -209,6 +236,11 @@ http {
 
         location /health/admin {
             proxy_pass http://admin_service/health/;
+            proxy_set_header Host $host;
+        }
+
+        location /health/file {
+            proxy_pass http://file_service/api/health/;
             proxy_set_header Host $host;
         }
 
