embedding service now online and working

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -58,6 +58,10 @@ http {
         server file-service:8006;
     }
 
+    upstream embedding_service {
+        server embedding-service:8007;
+    }
+
     # Main server block
     server {
         listen 80;
@@ -213,6 +217,26 @@ http {
             proxy_buffer_size 32k;
         }
 
+        # Embedding service routes
+        location /api/embeddings/ {
+            proxy_pass http://embedding_service/embeddings/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            
+            # Increase timeout for embedding processing
+            proxy_read_timeout 600s;
+            proxy_connect_timeout 600s;
+            proxy_send_timeout 600s;
+            
+            # Increase buffer sizes for file uploads
+            client_max_body_size 50M;
+            proxy_buffers 16 16k;
+            proxy_buffer_size 32k;
+        }
+
         # Health check endpoints
         location /health/auth {
             proxy_pass http://auth_service/health/;
@@ -241,6 +265,11 @@ http {
 
         location /health/file {
             proxy_pass http://file_service/api/health/;
+            proxy_set_header Host $host;
+        }
+
+        location /health/embedding {
+            proxy_pass http://embedding_service/health/;
             proxy_set_header Host $host;
         }
 
