--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,6 +149,34 @@ services:
       - ./file-service:/app
       - file-storage:/app/media/encrypted_files
 
+  embedding-service:
+    build:
+      context: ./embedding-service
+      dockerfile: Dockerfile
+    ports:
+      - "8007:8007"
+    environment:
+      - SECRET_KEY=${SECRET_KEY:-your-secret-key-here}
+      - DEBUG=${DEBUG:-True}
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS:-*}
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-your-secret-key-here}
+      - DATABASE_SERVICE_URL=http://database-service:8004
+      - AUTH_SERVICE_URL=http://auth-service:8001
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OPENAI_EMBEDDING_MODEL=${OPENAI_EMBEDDING_MODEL:-text-embedding-ada-002}
+      - OPENAI_MAX_TOKENS_PER_CHUNK=${OPENAI_MAX_TOKENS_PER_CHUNK:-8000}
+      - MAX_CONCURRENT_EMBEDDINGS=${MAX_CONCURRENT_EMBEDDINGS:-3}
+      - EMBEDDING_RETRY_MAX_ATTEMPTS=${EMBEDDING_RETRY_MAX_ATTEMPTS:-3}
+      - EMBEDDING_RETRY_DELAY=${EMBEDDING_RETRY_DELAY:-60}
+      - MAX_FILE_SIZE=${MAX_FILE_SIZE:-52428800}
+      - ALLOWED_FILE_TYPES=${ALLOWED_FILE_TYPES:-.pdf,.txt,.doc,.docx}
+    depends_on:
+      - database-service
+      - auth-service
+    volumes:
+      - ./embedding-service:/app
+      - embedding-temp:/app/media/temp_files
+
   nginx:
     build:
       context: ./nginx
@@ -162,6 +190,7 @@ services:
       - database-service
       - admin-service
       - file-service
+      - embedding-service
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - patient-static:/patient-static
@@ -189,3 +218,4 @@ volumes:
   auth-static:
   admin-static:
   file-storage:
+  embedding-temp:
