embedding service now online and working

--- a/.env
+++ b/.env
@@ -70,6 +70,9 @@ ADMIN_SERVICE_URL=http://admin-service:8005
 # File service
 FILE_SERVICE_URL=http://file-service:8006
 
+# Embedding service
+EMBEDDING_SERVICE_URL=http://embedding-service:8007
+
 # ===========================================
 # SERVICE AUTHENTICATION
 # ===========================================
@@ -135,6 +138,36 @@ CLINICIAN_SERVICE_PORT=8003
 DATABASE_SERVICE_PORT=8004
 ADMIN_SERVICE_PORT=8005
 FILE_SERVICE_PORT=8006
+EMBEDDING_SERVICE_PORT=8007
+
+# ===========================================
+# OPENAI CONFIGURATION
+# ===========================================
+
+# OpenAI API Key - REQUIRED for embedding service
+OPENAI_API_KEY=
+# OpenAI Embedding Model
+OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
+
+# Maximum tokens per chunk (for text splitting)
+OPENAI_MAX_TOKENS_PER_CHUNK=2000
+
+# ===========================================
+# EMBEDDING SERVICE CONFIGURATION
+# ===========================================
+
+# Maximum concurrent embedding processes
+MAX_CONCURRENT_EMBEDDINGS=3
+
+# Retry configuration for failed embeddings
+EMBEDDING_RETRY_MAX_ATTEMPTS=3
+EMBEDDING_RETRY_DELAY=60
+
+# Maximum file size for embedding processing (in bytes)
+MAX_FILE_SIZE=52428800
+
+# Allowed file types for embedding
+ALLOWED_FILE_TYPES=.pdf,.txt,.doc,.docx
 
 # ===========================================
 # DJANGO SETTINGS MODULE
