nginx config for render operations

--- a/nginx/Dockerfile.render
+++ b/nginx/Dockerfile.render
@@ -7,10 +7,10 @@ RUN apk add --no-cache gettext
 RUN rm /etc/nginx/conf.d/default.conf
 
 # Copy Render-specific nginx config template
-COPY nginx.render.conf /etc/nginx/nginx.conf.template
+COPY nginx/nginx.render.conf /etc/nginx/nginx.conf.template
 
 # Copy startup script
-COPY docker-entrypoint.sh /docker-entrypoint.sh
+COPY nginx/docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
 
 EXPOSE 80
