nginx config for render operations

--- a/nginx/nginx.render.conf
+++ b/nginx/nginx.render.conf
@@ -243,7 +243,7 @@ http {
         }
         
         location @patient_static {
-            proxy_pass https://healthcare-patient-service-48j5.onrender.com/static/;
+            proxy_pass https://healthcare-patient-service-48j5.onrender.com;
             proxy_intercept_errors on;
             error_page 404 = @admin_static;
             
@@ -259,7 +259,7 @@ http {
         }
         
         location @admin_static {
-            proxy_pass https://healthcare-admin-service.onrender.com/static/;
+            proxy_pass https://healthcare-admin-service.onrender.com;
             proxy_set_header Host healthcare-admin-service.onrender.com;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
