nginx config for render operations

--- a/nginx/nginx.render.conf
+++ b/nginx/nginx.render.conf
@@ -65,6 +65,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header Cookie $http_cookie;
+            proxy_pass_request_headers on;
             proxy_ssl_server_name on;
         }
 
@@ -83,6 +85,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header Cookie $http_cookie;
+            proxy_pass_request_headers on;
             proxy_ssl_server_name on;
         }
 
