integrated translation microservice

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -62,6 +62,10 @@ http {
         server embedding-service:8007;
     }
 
+    upstream translation_service {
+        server translation-service:8008;
+    }
+
     # Main server block
     server {
         listen 80;
@@ -237,6 +241,15 @@ http {
             proxy_buffer_size 32k;
         }
 
+        location /api/translation/ {
+            proxy_pass http://translation_service/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+        }
+
         # Health check endpoints
         location /health/auth {
             proxy_pass http://auth_service/health/;
@@ -272,6 +285,12 @@ http {
             proxy_pass http://embedding_service/health/;
             proxy_set_header Host $host;
         }
+
+        location /health/translation {
+            proxy_pass http://translation_service/health;
+            proxy_set_header Host $host;
+        }
+
 
         # Combined health check
         location /health {
