--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -177,6 +177,41 @@ services:
       - ./embedding-service:/app
       - embedding-temp:/app/media/temp_files
 
+  translation-service:
+    build:
+      context: ./translation-service # Points to your service's folder
+      dockerfile: Dockerfile
+    container_name: translation_app
+    ports:
+      - "8008:8008" # Using the consistent port mapping
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - AUTH_SERVICE_URL=http://auth-service:8001
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-your-secret-key-here}
+    depends_on:
+      - redis
+      - auth-service
+    volumes:
+      - ./translation-service:/app
+      - huggingface-cache:/home/appuser/.cache/huggingface
+
+  worker:
+    build:
+      context: ./translation-service # Also builds from the same folder
+      dockerfile: Dockerfile
+    container_name: translator_worker
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    # Overwrite the default entrypoint to run the worker script
+    entrypoint: python worker.py
+    depends_on:
+      - redis
+    volumes:
+      - ./translation-service:/app
+      - huggingface-cache:/home/appuser/.cache/huggingface
+
   nginx:
     build:
       context: ./nginx
@@ -191,6 +226,7 @@ services:
       - admin-service
       - file-service
       - embedding-service
+      - translation-service
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - patient-static:/patient-static
@@ -219,3 +255,4 @@ volumes:
   admin-static:
   file-storage:
   embedding-temp:
+  huggingface-cache:
