--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -58,8 +58,8 @@ http {
         server file-service:8006;
     }
 
-    upstream embedding_service {
-        server embedding-service:8007;
+    upstream rag_embedding_service {
+        server rag-embedding-service:8007;
     }
 
     # Main server block
@@ -217,9 +217,9 @@ http {
             proxy_buffer_size 32k;
         }
 
-        # Embedding service routes
-        location /api/embeddings/ {
-            proxy_pass http://embedding_service/embeddings/;
+        # RAG Embedding service routes
+        location /api/rag/ {
+            proxy_pass http://rag_embedding_service/api/rag/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -227,14 +227,25 @@ http {
             proxy_set_header Authorization $http_authorization;
             
             # Increase timeout for embedding processing
-            proxy_read_timeout 600s;
-            proxy_connect_timeout 600s;
-            proxy_send_timeout 600s;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 300s;
+        }
+        
+        # WebSocket for embedding progress
+        location /ws/embedding/ {
+            proxy_pass http://rag_embedding_service/ws/embedding/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             
-            # Increase buffer sizes for file uploads
-            client_max_body_size 50M;
-            proxy_buffers 16 16k;
-            proxy_buffer_size 32k;
+            # WebSocket timeouts
+            proxy_read_timeout 86400s;
+            proxy_send_timeout 86400s;
         }
 
         # Health check endpoints
@@ -268,8 +279,8 @@ http {
             proxy_set_header Host $host;
         }
 
-        location /health/embedding {
-            proxy_pass http://embedding_service/health/;
+        location /health/rag {
+            proxy_pass http://rag_embedding_service/health/;
             proxy_set_header Host $host;
         }
 
