--- a/rag-embedding-service/Dockerfile
+++ b/rag-embedding-service/Dockerfile
@@ -1,32 +1,29 @@
 FROM python:3.11-slim
 
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
 WORKDIR /app
 
-# Install system dependencies
 RUN apt-get update && apt-get install -y \
-    netcat-traditional \
+    gcc \
+    python3-dev \
+    libpq-dev \
+    build-essential \
     dos2unix \
+    netcat-traditional \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements and install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application
 COPY . .
 
-# Create media directory for temporary file storage
 RUN mkdir -p /app/media/temp_files
-
-# Expose port
-EXPOSE 8007
+RUN mkdir -p /app/static
 
 # Copy entrypoint script and convert line endings
 COPY --chmod=755 entrypoint.sh /entrypoint.sh
 RUN dos2unix /entrypoint.sh
 
-# Run the entrypoint script
+EXPOSE 8007
+
 ENTRYPOINT ["/entrypoint.sh"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8007"]
