--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,6 +46,7 @@ http {
         server clinician-service:8003;
     }
 
+
     upstream database_service {
         server database-service:8004;
     }
@@ -141,21 +142,31 @@ http {
         }
 
         # Clinician service routes
-        location /api/clinicians/ {
-            proxy_pass http://clinician_service;
+        location /api/clinician/ {
+            proxy_pass http://clinician_service/api/clinician/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+        }
+
+        location /clinician/ {
+            proxy_pass http://clinician_service/clinician/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /clinician/ {
-            proxy_pass http://clinician_service;
+        # Clinician service static files
+        location ~ ^/clinician/static/(.*)$ {
+            proxy_pass http://clinician_service/static/$1;
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            expires 30d;
+            add_header Cache-Control "public, immutable";
         }
+
 
         # Admin service routes
         location /api/admin/ {
@@ -262,7 +273,9 @@ http {
         location /health/clinician {
             proxy_pass http://clinician_service/health/;
             proxy_set_header Host $host;
+            proxy_set_header Authorization $http_authorization;
         }
+
 
         location /health/database {
             proxy_pass http://database_service/health/;
