environment file updated

--- a/.env
+++ b/.env
@@ -70,8 +70,8 @@ ADMIN_SERVICE_URL=http://admin-service:8005
 # File service
 FILE_SERVICE_URL=http://file-service:8006
 
-# Embedding service
-EMBEDDING_SERVICE_URL=http://embedding-service:8007
+# RAG Embedding service
+RAG_SERVICE_URL=http://rag-embedding-service:8007
 
 # ===========================================
 # SERVICE AUTHENTICATION
@@ -138,36 +138,34 @@ CLINICIAN_SERVICE_PORT=8003
 DATABASE_SERVICE_PORT=8004
 ADMIN_SERVICE_PORT=8005
 FILE_SERVICE_PORT=8006
-EMBEDDING_SERVICE_PORT=8007
+RAG_SERVICE_PORT=8007
 
 # ===========================================
 # OPENAI CONFIGURATION
 # ===========================================
 
-# OpenAI API Key - REQUIRED for embedding service
+# OpenAI API Key - REQUIRED for RAG embeddings
 OPENAI_API_KEY=
+
 # OpenAI Embedding Model
-OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
-
-# Maximum tokens per chunk (for text splitting)
-OPENAI_MAX_TOKENS_PER_CHUNK=2000
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 
 # ===========================================
-# EMBEDDING SERVICE CONFIGURATION
+# RAG EMBEDDING SERVICE CONFIGURATION
 # ===========================================
 
-# Maximum concurrent embedding processes
-MAX_CONCURRENT_EMBEDDINGS=3
+# Text chunking configuration
+RAG_CHUNK_SIZE=1000
+RAG_CHUNK_OVERLAP=200
 
-# Retry configuration for failed embeddings
-EMBEDDING_RETRY_MAX_ATTEMPTS=3
-EMBEDDING_RETRY_DELAY=60
+# Processing configuration
+RAG_MAX_CONCURRENT_PROCESSING=3
+RAG_PROCESSING_TIMEOUT=300
+RAG_RETRY_MAX_ATTEMPTS=3
+RAG_RETRY_DELAY=60
 
-# Maximum file size for embedding processing (in bytes)
-MAX_FILE_SIZE=52428800
-
-# Allowed file types for embedding
-ALLOWED_FILE_TYPES=.pdf,.txt,.doc,.docx
+# Redis configuration for RAG queue
+REDIS_DB=1
 
 # ===========================================
 # DJANGO SETTINGS MODULE
