--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -71,12 +71,12 @@ http {
         # Set max upload size globally
         client_max_body_size 50M;
 
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
+        # Security headers (moved to individual locations to allow overrides)
+        # add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline' 'unsafe-eval'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com;" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline' 'unsafe-eval'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://unpkg.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com;" always;
 
         # Root location - redirect to login
         location = / {
@@ -161,10 +161,46 @@ http {
 
         # Clinician service static files
         location ~ ^/clinician/static/(.*)$ {
-            proxy_pass http://clinician_service/static/$1;
+            proxy_pass http://clinician_service/clinician/static/$1;
             proxy_set_header Host $host;
             expires 30d;
             add_header Cache-Control "public, immutable";
+        }
+        
+        # Medical record viewing - special handling for iframe
+        location /api/files/medical-records/ {
+            proxy_pass http://clinician_service/api/files/medical-records/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Allow iframe from same origin
+            proxy_hide_header X-Frame-Options;
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            
+            # Pass JWT token from cookie to Authorization header
+            set $auth_header "";
+            if ($cookie_access_token) {
+                set $auth_header "Bearer $cookie_access_token";
+            }
+            proxy_set_header Authorization $auth_header;
+        }
+        
+        # Temp file cleanup endpoint
+        location /api/files/temp/ {
+            proxy_pass http://clinician_service/api/files/temp/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Pass JWT token from cookie to Authorization header
+            set $auth_header "";
+            if ($cookie_access_token) {
+                set $auth_header "Bearer $cookie_access_token";
+            }
+            proxy_set_header Authorization $auth_header;
         }
 
 
@@ -309,7 +345,7 @@ http {
             proxy_hide_header X-Content-Type-Options;
             
             # Try auth service first
-            proxy_pass http://auth_service/static/;
+            proxy_pass http://auth_service;
             proxy_intercept_errors on;
             error_page 404 = @patient_static;
             
@@ -324,7 +360,22 @@ http {
         }
         
         location @patient_static {
-            proxy_pass http://patient_service;
+            proxy_pass http://patient_service$request_uri;
+            proxy_intercept_errors on;
+            error_page 404 = @clinician_static;
+            
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Cache static files
+            expires 30d;
+            add_header Cache-Control "public, immutable";
+        }
+        
+        location @clinician_static {
+            proxy_pass http://clinician_service$request_uri;
             proxy_intercept_errors on;
             error_page 404 = @admin_static;
             
@@ -339,7 +390,7 @@ http {
         }
         
         location @admin_static {
-            proxy_pass http://admin_service;
+            proxy_pass http://admin_service$request_uri;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -356,6 +407,21 @@ http {
             expires 7d;
             add_header Cache-Control "public";
         }
+        
+        # Special handling for temporary medical records to allow iframe embedding
+        location /media/temp_medical_records/ {
+            alias /media/temp_medical_records/;
+            
+            # Only set the headers we need for iframe embedding
+            add_header Cache-Control "private, no-store" always;
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            
+            # Ensure other security headers are set correctly
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-XSS-Protection "1; mode=block" always;
+            
+            expires 1h;
+        }
 
         # Default location for other unmatched paths (must be last)
         location / {
@@ -364,6 +430,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Add X-Frame-Options for security
+            add_header X-Frame-Options "SAMEORIGIN" always;
         }
 
         # Error pages
